[b]Version 0.6.2[/b]:

(2008-07-17)
 * Try to use alsa as default audio driver in linux.

(2008-07-16)
 * Fix: remember the last directory used when adding files to the 
   playlist. Fixes bug #2019139.

(2008-07-13)
 * Another fix for Qt 4.4. Dragging files to the playlist didn't work.
 * Added the Slovenian translation, by Janez Troha <janez.troha@gmail.com>.
 * Fix: mplayer crashed when trying to play audio files if the option to
   run mplayer in its own window was enabled. Now I hope this is fixed.
 
(2008-07-12)
 * Added a new option for command line: -sub. It specifies a subtitle file
   to be loaded for the first video. It requires at least a file to play
   in the command line, otherwise the option will be ignored.
 * Added a new option "Play files from start" in the playlist preferences.
   If enabled (the default) files in the playlist will begin to play from
   the beginning, otherwise they'll play from the position they were last
   time you played them.

(2008-07-09)
 * Now the initialization of the audio track should work ok again, even if
   the option "Fast audio track switching" is set to "No".

(2008-07-08)
 * Added a context menu in the find subtitles dialog, with two options:
   "download" and "copy link to clipboard".

(2008-07-05)
 * Some changes in the single instance options. Now the single instance is
   enabled by default. There's also the possibility to let the application
   to choose automatically the port to be used, which is also the default
   option.

(2008-07-03)
 * Temporary fix for the problem created yesterday: now when a file starts to 
   play, the audio track will be changed using the mplayer slave command even 
   if the option "Fast audio track switching" is set to "No". This makes that 
   the selection of the initial audio track works ok with avi and mkv files 
   for example, but it won't work yet with ogm for instance. 
 * The floating control in the default gui saves/restores its actions to 